# crew-for-web

prepmyinterview/: README.md  pyproject.toml
prepmyinterview/src/prepmyinterview/: app.py  crew.py  interview_prep.md  main.py  report.md
prepmyinterview/src/prepmyinterview/config/: agents.yaml  tasks.yaml
prepmyinterview/src/prepmyinterview/db/: chroma.sqlite3
prepmyinterview/src/prepmyinterview/output/: 00_extract.md  00_job_parsing.md  01_company_analysis.md  01_research.md  02_hr.md  02_interview.md  02_job_analysis.md  03_interview.md  03_interview_questions.md  04_interview_answers.md
