[project]
name = "prepmyinterview"
version = "0.1.0"
description = "PrepMyInterview using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
prepmyinterview = "prepmyinterview.main:run"
run_crew = "prepmyinterview.main:run"
train = "prepmyinterview.main:train"
replay = "prepmyinterview.main:replay"
test = "prepmyinterview.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
